--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .imagemdc{
             width: 490px;
             height: 318px;
-            position: relative;
+            position: fixed;
             bottom: 285px;
             left: 5px;
             
