--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
    
     <div class="links">
-        <a href="...." ' >
+        <a href="https://api.whatsapp.com/send?phone=5585985451823&text=Ol%C3%A1%2C%20gostaria%20de%20fazer%20meu%20pedido!!" ' >
             <img  src="whatsapp.png" alt="logoapp"  class="whatsapp">
            <p class ='txtW' style="text-decoration: none ;"> whatsapp</p>
         </a>
