--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booton</title>
     <style>
-        .corpo{
-            max-width: 800px;
-            min-width: 200px;
+        corpo{
+            max-width:594;
+            min-width: 320px;
             margin: left;
             font: normal 25px italic;
-
-
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
         }
+
         .logo{
             width: 450px;
         
