--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p class ='txtI'>Instagram</p>
         </a>
                             <a href="" onclick="copiar()">
-            <img src="/img/logo-pix-icone-1024.png" class ='pix' alt="">
+            <img src="logo-pix-icone-1024.png" class ='pix' alt="">
             <p class = 'txtP'>Pix</p>
         </a>
         <input type="text" class="texto" value="46.974.075/0001-74" hidden>
