--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
            <img src="logo-instagram.png" class ='Instagram'alt="">
             <p class ='txtI'>Instagram</p>
         </a>
-                            <a href="" onclick="copiar()">
+                            <a onclick="copiar()">
             <img src="logo-pix-icone-1024.png" class ='pix' alt="">
             <p class = 'txtP'>Pix</p>
         </a>
